# ARES

./: .gitignore  README.md  pyproject.toml  requirements.txt
ares/entities/: ally.py  base_area.py  drone.py  enemy.py  ennemy.py  entity.py  target.py
ares/environment/: base_env.py
ares/eval/: eval.py
ares/models/: 1_ally_go_to_target.pt  2_ally_go_to_target_and_return_to_base.pt  3.1_ally_tries_to_dodge_enemies.pt  3_ally_semi_dodges_enemies.pt
ares/torchrl_setup/: collector.py  critic.py  environment.py  hyperparameters_and_setup.py  loss.py  policy.py  replay_buffer.py  setup.py
ares/training/: finetune_model.py  train.py
config/: config.json  config.py
