[tool.poetry]
name = "ares"
version = "0.1"
description = "ARES Project"
authors = ["Delfox <contact@delfox.net>"]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
